fix(event_list): fix no disaster short state alignment

--- a/src/features/events_list/components/ShortState/ShortState.module.css
+++ b/src/features/events_list/components/ShortState/ShortState.module.css
@@ -6,7 +6,6 @@
 .noDisasters {
   text-align: center;
   padding: calc(var(--unit) * 4) 0;
-  display: flex;
   flex-wrap: wrap;
   align-items: center;
   align-content: center;
